# tide-basic-crud

./: .env.test  .qovery.yml  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  sqlx-data.json
.github/workflows/: ci.yml
public/css/: custom.css
public/js/: api.js
src/: main.rs
src/controllers/: auth.rs  dino.rs  mod.rs  views.rs
src/handlers/: dino.rs  mod.rs
templates/: form.html  index.html  layout.html
tests/: schema.sql
