[package]
name = "tide-basic-crud"
version = "0.1.0"
authors = ["Pepo Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
