[package]
name = "tide-basic-crud"
version = "0.1.0"
authors = ["Pepo Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "offline", "macros", "chrono", "json", "postgres", "uuid"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
tera = "1.5.0"
tide-tera = "0.2.3"

[dev-dependencies]
surf = "2.1.0"
assert-json-diff = "1.1.0"
lazy_static = "1.4.0"
