[package]
name = "tide-basic-crud"
version = "0.1.0"
authors = ["Javier Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "offline", "macros", "chrono", "json", "postgres", "uuid"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
tera = "1.6.1"
tide-tera = "0.2.3"
oauth2 = { version = "4.0.0-alpha.3", features = ["reqwest"], default-features = false  }
surf = { version = "2.1.0" }

[dev-dependencies]
assert-json-diff = "2.0.0"
lazy_static = "1.4.0"
